plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.jetbrains.kotlin.jvm'
}

group = 'flim'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springCloudVersion', "2025.0.0")
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation 'software.amazon.awssdk:s3:2.29.43'
    implementation 'software.amazon.awssdk:dynamodb:2.29.43'
    implementation 'software.amazon.awssdk:dynamodb-enhanced:2.29.43'
    implementation 'software.amazon.awssdk:cognitoidentityprovider:2.29.43'
    implementation 'software.amazon.awssdk:core:2.29.43'
    implementation 'software.amazon.awssdk:sns:2.29.43'
    implementation 'software.amazon.awssdk:url-connection-client:2.25.0' // ví dụ version mới

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'



    // https://mvnrepository.com/artifact/com.github.derjust/spring-data-dynamodb
    implementation 'com.github.derjust:spring-data-dynamodb:5.1.0'


    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //WebSocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // https://mvnrepository.com/artifact/io.github.cdimascio/java-dotenv
    implementation 'io.github.cdimascio:java-dotenv:5.2.2'

    // https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.2'

    //QUản lý OTP (Lưu, lấy và xóa, quy định thời gian OTP)
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    //qua lý thời gian gửi message
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.2' // Đảm bảo phiên bản phù hợp với Jackson hiện tại

    implementation 'software.amazon.awssdk:http-client-spi:2.29.43'


    // JWT này mạnh hơn và có nhiều tính năng hơn so với thư viện JWT cũ
    implementation 'com.nimbusds:nimbus-jose-jwt:10.3'

    implementation 'vn.payos:payos-java:1.0.0'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8" // Thư viện PayOS để xử lý thanh toán

    implementation 'org.springframework.boot:spring-boot-starter-security'

// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-oauth2-resource-server
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server:3.5.3'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
